fix/meet the logo centered
the text title is now centered while the image and copy are aligned below with extra padding

--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -992,7 +992,7 @@ nav a:hover {
         margin: auto;
     }
 .slider-item {
-        padding: 2rem .5rem;
+        padding: .5rem;
         display: none;
     }
 .slider-item:first-child {
@@ -1173,9 +1173,6 @@ nav a:hover {
 .min-h-\[110px\] {
   min-height: 110px;
 }
-.min-h-\[114px\] {
-  min-height: 114px;
-}
 .min-h-\[20vh\] {
   min-height: 20vh;
 }
@@ -1196,9 +1193,6 @@ nav a:hover {
 }
 .w-screen {
   width: 100vw;
-}
-.min-w-\[265px\] {
-  min-width: 265px;
 }
 .min-w-\[261px\] {
   min-width: 261px;
@@ -1321,33 +1315,17 @@ nav a:hover {
 .border-gold {
   border-color: #a88342;;
 }
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
 .bg-brown {
   background-color: #683B2B;;
 }
 .bg-creme {
   background-color: #FAF6F2;;
 }
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
 .bg-tan {
   background-color: #DED1BD;;
 }
 .bg-transparent {
   background-color: transparent;
-}
-.bg-yellow-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -1411,6 +1389,10 @@ nav a:hover {
   padding-left: 3rem;
   padding-right: 3rem;
 }
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1418,6 +1400,10 @@ nav a:hover {
 .px-5p {
   padding-left: 5%;
   padding-right: 5%;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .px-8 {
   padding-left: 2rem;
@@ -1473,6 +1459,9 @@ nav a:hover {
 }
 .pt-6 {
   padding-top: 1.5rem;
+}
+.pt-4 {
+  padding-top: 1rem;
 }
 .text-left {
   text-align: left;
@@ -1616,8 +1605,8 @@ nav a:hover {
   .sm\:col-span-3 {
     grid-column: span 3 / span 3;
   }
-  .sm\:col-span-5 {
-    grid-column: span 5 / span 5;
+  .sm\:col-span-7 {
+    grid-column: span 7 / span 7;
   }
   .sm\:min-h-\[422px\] {
     min-height: 422px;
